--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "formula-iserror",
-  "version": "1.0.0",
-  "description": "Checks for any error; except for error.NA",
+  "version": "1.0.1",
+  "description": "Checks for any error",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
