--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "formula-iserror",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Checks for any error",
   "main": "index.js",
   "scripts": {
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/FormulaPages/iserror#readme",
   "dependencies": {
-    "formula-errors": "^1.0.0"
+    "formula-errors": "^1.0.0",
+    "formula-iserr": "^1.0.0"
   }
 }
