--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "formula-iserror",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "Checks for any error",
-  "main": "index.js",
+  "main": "ISERROR.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test",
+    "build": "babel ISERROR.es6 -m umd --out-file ISERROR.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +18,10 @@
   },
   "homepage": "https://github.com/FormulaPages/iserror#readme",
   "dependencies": {
-    "formula-errors": "^1.0.0",
-    "formula-iserr": "^1.0.0"
+    "formula-errors": "^1.0.2",
+    "formula-iserr": "^1.0.4"
+  },
+  "devDependencies": {
+    "mocha": "^2.3.3"
   }
 }
